fix: gif not showing

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -13,6 +13,7 @@
 
     animation: fadeinApp 0.9s forwards;
     height: 100%;
+    background-color: var(--page-background-color);
   }
   &__frame {
     z-index: 1;
@@ -22,7 +23,7 @@
     &--blur {
       filter: blur(10px);
     }
-    background-color: var(--page-background-color);
+    background: rgba(255, 255, 255, 0);
   }
   &__cover {
     position: absolute;
@@ -39,7 +40,7 @@
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
-    background-color: transparent;
+    z-index: -6;
 
     &--content {
       padding: 4px 0px 0px;
